fix: made TabControl tabs wrap if needed

--- a/src/components/input/TabControl.scss
+++ b/src/components/input/TabControl.scss
@@ -13,6 +13,7 @@
 	.component-tab-control-tabs
 	{
 		display: flex;
+		flex-wrap: wrap;
 		margin-bottom: 0.75rem;
 	}
 
